# polynomial

./: CMakeLists.txt
include/: Polynomial.h
src/: Polynomial.cpp
test/: Polynomial_test.cpp
